test/compile_error/noelement.conf.def
config redefined_conf {
	enum foo_t { }
}
